--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "require-dir": "^0.3.0"
   },
   "devDependencies": {
-    "gulp-sass": "^2.1.1"
+    "gulp-sass": "^2.1.1",
+    "gulp-serve": "^1.2.0",
+    "gulp-task-listing": "^1.0.1"
   }
 }
