--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-inject": "^3.0.0",
     "gulp-sass": "^2.1.1",
     "gulp-serve": "^1.2.0",
+    "gulp-symlink": "^2.1.3",
     "gulp-task-listing": "^1.0.1",
     "main-bower-files": "^2.11.1",
     "require-dir": "^0.3.0"
