--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-symlink": "^2.1.3",
     "gulp-task-listing": "^1.0.1",
     "main-bower-files": "^2.11.1",
-    "require-dir": "^0.3.0"
+    "require-dir": "^0.3.0",
+    "rimraf": "^2.5.0"
   }
 }
