Adde ractive for the UI two-way binding.

--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "libdraw": "https://github.com/natemago/libdraw.git",
     "jquery": "~2.1.4",
-    "primer-di": "~1.1.0"
+    "primer-di": "~1.1.0",
+    "ractive": "~0.7.3"
   }
 }
